@@ -20,6 +20,9 @@ Revision history for WWW::Mechanize
     [FIXED]
     - tick() can now handle checkboxes without a value (GH#331) (Jordan M Adler
       and Julien Fiegehenn)
+    [ENHANCEMENTS]
+    - mech_dump now treats all local files like HTML regardless of what it
+      thinks their content types are (GH#63) (Julien Fiegehenn)
 
     [ENHANCEMENTS]
     - set_fields() and submit_form(with_fields => ...) can now set multiple
